# herd

./: .editorconfig  .gitignore  Cargo.toml  README.md  build.rs
benchmarks/: .gitignore  bench-herd.ps1  bench-js.ps1  bench-py.ps1  binarytrees-m.herd  binarytrees.herd  binarytrees.js  binarytrees.py  compare.ps1  csv-m.herd  csv.herd  csv.js  csv.py  helloworld.herd  iterables.herd  iterables.js  iterables.py  mandelbrot.herd  mandelbrot.js  mandelbrot.py  nbody.herd  nbody.js  nbody.py
src/: analysis.rs  ast.rs  builtins.rs  dict.rs  error.rs  interpreter.rs  jit.rs  lang.lalrpop  lib.rs  lines.rs  main.rs  natives.rs  parse_helpers.rs  pos.rs  prelude.bovine  prelude.herd  prelude.rs  rc.rs  types.rs  value.rs  value64.rs
src/stdlib/: basics.bovine  basics.herd  bitwise.bovine  dict.bovine  dict.herd  file.herd  io.bovine  io.herd  list.bovine  list.herd  math.bovine  math.herd  mod.rs  parallel.herd  random.bovine  random.herd  regex.herd  string.herd  system.herd
test_scripts/: binarytrees-jit.bovine  binarytrees.bovine  binarytrees.herd  blocks.bovine  calc.bovine  closures1.bovine  dictionary.txt  dicts.bovine  errors.bovine  errors.herd  factorial.bovine  imports-1.bovine  imports-2.bovine  iterables.bovine  iterables.py  jit.bovine  letterboxed.herd  lru.bovine  lru.herd  mandelbrot.bovine  mandelbrot.herd  match.bovine  mutual-recursion.bovine  patterns.bovine  returns.bovine  reverse.bovine  y-combinator.bovine
tests/: snapshots.rs  stdlib_snapshots.rs
tests/common/: mod.rs  snapshot_helpers.rs
tests/snapshots/: snapshots__call_non_function.snap  snapshots__call_wrong_arg_count.snap  snapshots__parallel_map_error.snap  stdlib_snapshots__parallel_map_error.snap  stdlib_snapshots__stdlib_import_error_malformed_path.snap  stdlib_snapshots__stdlib_import_error_non_existent.snap  stdlib_snapshots__stdlib_map_error.snap  stdlib_snapshots__stdlib_slice_error.snap  stdlib_snapshots__stdlib_sort_error.snap
