[package]
name = "bovine"
version = "0.1.0"
edition = "2021"

[build-dependencies] # <-- We added this and everything after!
lalrpop = "0.20.2"

[dependencies]
clap = { version = "4.5.15", features = ["derive"] }
lalrpop-util = { version = "0.20.2", features = ["lexer", "unicode"] }
rustyline = { version = "14.0.0", features = ["derive"] }

[dev-dependencies]
rstest = "0.6.4"

[profile.release]
debug = true
