[package]
name = "herd"
version = "0.1.0"
edition = "2021"

[build-dependencies] # <-- We added this and everything after!
lalrpop = "0.20.2"

[dependencies]
clap = { version = "4.5.15", features = ["derive"] }
cranelift = "0.111.0"
cranelift-jit = "0.111.0"
cranelift-module = "0.111.0"
cranelift-native = "0.111.0"
lalrpop-util = { version = "0.20.2", features = ["lexer", "unicode"] }
mimalloc = "0.1.43"
rand = "0.8.5"
regex = "1.11.1"
rustyline = { version = "14.0.0", features = ["derive"] }
strum = { version = "0.26.3", features = ["derive"] }

[dev-dependencies]
insta = "1.40.0"
rstest = "0.6.4"

[profile.release]
debug = true

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
