[package]
name = "herd"
version = "0.1.0"
edition = "2024"

[build-dependencies]
lalrpop = "0.22.2"

[features]
debug-alloc = []

[dependencies]
clap = { version = "4.5.15", features = ["derive"] }
cranelift = "0.125.4"
cranelift-jit = "0.125.4"
cranelift-module = "0.125.4"
cranelift-native = "0.125.4"
lalrpop-util = { version = "0.22.2", features = ["lexer", "unicode"] }
mimalloc = "0.1.43"
rand = "0.9.2"
rayon = "1.10.0"
regex = "1.11.1"
rustyline = { version = "17.0.2", features = ["derive"] }
strum = { version = "0.27.2", features = ["derive"] }

[dev-dependencies]
insta = "1.40.0"
rstest = "0.26.1"

[profile.release]
debug = true

[profile.dev.package]
insta.opt-level = 3
